--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "Organisation": "Marval Software",
     "DisplayName": "@@PluginDisplayname",
     "Icon": "img/microsoft-teams.png",
-    "Version": "1.1.0",
+    "Version": "1.2.0",
     "SupportedVersions": [
         "15.7.1",
         "15.7.2",
@@ -19,6 +19,7 @@
     "GlobalSettings": [
         "@@CustomerGUID",
         "@@CustomerName",
-        "@@SecretKey"
+        "@@SecretKey",
+        "@@ClientID"
     ]
 }
