--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "Organisation": "Marval Software",
     "DisplayName": "@@PluginDisplayname",
     "Icon": "img/microsoft-teams.png",
-    "Version": "1.2.0",
+    "Version": "1.2.1",
     "SupportedVersions": [
         "15.7.1",
         "15.7.2",
@@ -20,6 +20,7 @@
         "@@CustomerGUID",
         "@@CustomerName",
         "@@SecretKey",
-        "@@ClientID"
+        "@@ClientID",
+        "@@TenantID"
     ]
 }
