--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "Organisation": "Marval Software",
     "DisplayName": "@@PluginDisplayname",
     "Icon": "img/microsoft-teams.png",
-    "Version": "1.2.2",
+    "Version": "1.2.3",
     "SupportedVersions": [
         "15.7.1",
         "15.7.2",
@@ -21,6 +21,7 @@
         "@@CustomerName",
         "@@SecretKey",
         "@@ClientID",
-        "@@TenantID"
+        "@@TenantID",
+        "@@AADObjectGUIDLocation"
     ]
 }
