--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "Organisation": "Marval Software",
     "DisplayName": "@@PluginDisplayname",
     "Icon": "img/microsoft-teams.png",
-    "Version": "1.2.4",
+    "Version": "1.2.10",
     "SupportedVersions": [
         "15.7.1",
         "15.7.2",
@@ -22,6 +22,7 @@
         "@@SecretKey",
         "@@TenantID",
         "@@AADObjectGUIDLocation",
-        "@@ClientID"
+        "@@ClientID",
+        "@@ChatbotHostOverride"
     ]
 }
