--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: List files
-        run: ls
+        run: ls ${{ github.workspace }}
       - name: Zip files
-        run: zip -r Teams.zip .
+        run: zip -r Teams.zip ${{ github.workspace }}
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
