--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,12 +8,10 @@ jobs:
     name: Create Release
     runs-on: ubuntu-latest
     steps:
-      - name: List files
-        run: ls ${{ github.workspace }}
       - name: Zip files
-        run: zip -r Teams.zip ${{ github.workspace }}
+        run: cd ${{ github.workspace }} && zip -r Teams.zip .
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: Release
-          path: Teams.zip
+          path: ${{ github.workspace }}/Teams.zip
