--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Zip files
-        run: cd ${{ github.workspace }} && zip -r Teams.zip .
+        run: zip -r Teams.zip ${{ github.workspace }}/*
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: Release
-          path: ${{ github.workspace }}/Teams.zip
+          path: Teams.zip
