--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "Organisation": "Marval Software",
     "DisplayName": "@@PluginDisplayname",
     "Icon": "img/microsoft-teams.png",
-    "Version": "1.2.12",
+    "Version": "1.2.20",
     "SupportedVersions": [
         "15.7.1",
         "15.7.2",
@@ -23,8 +23,7 @@
         "@@TenantID",
         "@@AADObjectGUIDLocation",
         "@@ClientID",
-        "@@MarvalAPIKey",
-        "@@ChatbotHostOverride"
-
+        "@@ChatbotHostOverride",
+        "@@Region"
     ]
 }
