--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: MarvalSoftware.Plugins.Teams.zip
-          path: ${{github.workspace}}/*
-      - uses: actions/download-artifact@v4
+      - name: Zip files
+        run: cd ${{ github.workspace }} && zip -r MarvalSoftware.Plugins.Teams.zip .
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
