--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,9 @@ jobs:
     name: Create Release
     runs-on: ubuntu-latest
     steps:
+      - name: Set hash
+        id: vars
+        run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
       - uses: actions/checkout@v4
       - name: Zip files
         run: cd ${{ github.workspace }} && zip -r MarvalSoftware.Plugins.Teams.zip .
@@ -16,5 +19,5 @@ jobs:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "latest"
           prerelease: false
-          title: "Latest Release"
+          title: Release ${{ steps.vars.outputs.sha_short }}
           files: ${{ github.workspace }}/MarvalSoftware.Plugins.Teams.zip
