--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,16 +8,13 @@ jobs:
     name: Create Release
     runs-on: ubuntu-latest
     steps:
-      - name: Set hash
-        id: vars
-        run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
       - uses: actions/checkout@v4
       - name: Zip files
         run: cd ${{ github.workspace }} && zip -r MarvalSoftware.Plugins.Teams.zip .
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: ${{ steps.vars.outputs.sha_short }}
+          automatic_release_tag: ${{ github.sha }}
           prerelease: false
-          title: ${{ steps.vars.outputs.sha_short }}
+          title: Release ${{ github.sha }}
           files: ${{ github.workspace }}/MarvalSoftware.Plugins.Teams.zip
