--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Set outputs
+        id: vars
+        run: cd ${{ github.workspace }} && echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
       - name: Zip files
         run: cd ${{ github.workspace }} && zip -r MarvalSoftware.Plugins.Teams.zip .
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: ${{ github.sha }}
+          automatic_release_tag: ${{ steps.vars.outputs.sha_short }}
           prerelease: false
-          title: Release ${{ github.sha }}
+          title: Release ${{ steps.vars.outputs.sha_short }}
           files: ${{ github.workspace }}/MarvalSoftware.Plugins.Teams.zip
